fixed white space issue above nav bar & added icons to login/signup/logout

--- a/app/assets/stylesheets/_footer.scss
+++ b/app/assets/stylesheets/_footer.scss
@@ -34,6 +34,7 @@
 //footer: copyright 
     p {
         color: $light;
+        margin-bottom: 0;
     }
         
 }
